--- a/www/main.html
+++ b/www/main.html
@@ -15,6 +15,11 @@ Note this is a preliminary version of the package made available for reviewing p
 Package source: <a href="downloads/c060_0.1.tar.gz">c060_0.1.tar.gz</a> <br>
 <br>
 <br>
+<br>
+<br>
+Windows binary: <a href="downloads/c060_0.1.tar.gz">c060_0.1.zip</a> <br>
+<br>
+<br>
 </div>
 </body>
 </html>
