--- a/www/main.html
+++ b/www/main.html
@@ -15,9 +15,10 @@ Note this is a preliminary version of the package made available for reviewing p
 Package source: <a href="downloads/c060_0.1.tar.gz">c060_0.1.tar.gz</a> <br>
 <br>
 <br>
-Windows binary: <a href="downloads/c060_0.1.tar.gz">c060_0.1.zip</a> <br>
+Windows binary: <a href="downloads/c060_0.1.zip">c060_0.1.zip</a> <br>
 <br>
 <br>
+R-code used to evaluate the example data set:  <a href="downloads/c060_vignette.R">c060_vignette.R</a> <br>
 </div>
 </body>
 </html>
