--- a/www/main.html
+++ b/www/main.html
@@ -12,14 +12,14 @@ Note this is a preliminary version of the package made available for reviewing p
 </p>       
 <br>
 <br>
-Package source: <a href="downloads/c060_0.14.tar.gz">c060_0.14.tar.gz</a> <br>
+Package source: <a href="downloads/c060_0.18.tar.gz">c060_0.18.tar.gz</a> <br>
 <br>
 <br>
-Windows binary: <a href="downloads/c060_0.14.zip">c060_0.14.zip</a> <br>
+<!-- Windows binary: <a href="downloads/c060_0.14.zip">c060_0.14.zip</a> <br>
 <br>
 <br>
 R-code used to evaluate the example data set:  <a href="downloads/c060_vignette.R">c060_vignette.R</a> <br>
-last update 20.07.2012
+last update 20.07.2012 -->
 </div>
 </body>
 </html>
