uploaded package vignette to downloads folder and liked it to main.html
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@170 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/main.html
+++ b/www/main.html
@@ -6,6 +6,12 @@
   <meta name="keywords" content="C060">
 </head>
 <body>
+<p align="justify">
+This is the preliminary version of the article to appear in the Journal of Statistical Software.
+</p>       
+<br>
+<br>
+<a href="downloads/c060_vignette.pdf">c060_vignette.pdf</a>
 <!-- 
 <div id="inhalt">
 <p align="justify">
