added links to CRAN and the r-forge repository
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@171 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/main.html
+++ b/www/main.html
@@ -6,27 +6,21 @@
   <meta name="keywords" content="C060">
 </head>
 <body>
-<p align="justify">
-This is the preliminary version of the article to appear in the Journal of Statistical Software.
-</p>       
-<br>
-<br>
-<a href="downloads/c060_vignette.pdf">c060_vignette.pdf</a>
-<!-- 
 <div id="inhalt">
 <p align="justify">
-Note this is a preliminary version of the package made available for reviewing purposes.
+This is a preliminary version of the article to appear in the Journal of Statistical Software.
 </p>       
 <br>
+<a href="downloads/c060_vignette.pdf">c060_vignette.pdf</a>
 <br>
-Package source: <a href="downloads/c060_0.18.tar.gz">c060_0.18.tar.gz</a> <br>
+<p align="justify">
+The package is officially available on <a href="http://cran.r-project.org/web/packages/c060/index.html">CRAN</a>. 
+</p>   
+<p align="justify">
+The latest version is available at our r-forge <a href="https://r-forge.r-project.org/projects/c060/">repository</a> and can be installed by the following R command:
 <br>
-<br>
-<!-- Windows binary: <a href="downloads/c060_0.14.zip">c060_0.14.zip</a> <br>
-<br>
-<br>
-R-code used to evaluate the example data set:  <a href="downloads/c060_vignette.R">c060_vignette.R</a> <br>
-last update 20.07.2012 -->
+<pre> install.packages("c060", repos="http://R-Forge.R-project.org")  </pre>  
+</p> 
 </div>
 </body>
 </html>
