target="_blank" for the two links
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@172 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/main.html
+++ b/www/main.html
@@ -14,10 +14,10 @@ This is a preliminary version of the article to appear in the Journal of Statist
 <a href="downloads/c060_vignette.pdf">c060_vignette.pdf</a>
 <br>
 <p align="justify">
-The package is officially available on <a href="http://cran.r-project.org/web/packages/c060/index.html">CRAN</a>. 
+The package is officially available on <a href="http://cran.r-project.org/web/packages/c060/index.html" target="_blank">CRAN</a>. 
 </p>   
 <p align="justify">
-The latest version is available at our r-forge <a href="https://r-forge.r-project.org/projects/c060/">repository</a> and can be installed by the following R command:
+The latest version is available at our r-forge <a href="https://r-forge.r-project.org/projects/c060/" target="_blank">repository</a> and can be installed by the following R command:
 <br>
 <pre> install.packages("c060", repos="http://R-Forge.R-project.org")  </pre>  
 </p> 
